# CPP_Projects

./: README.md
CodeCaveDLL/: Readme.txt  assembly.asm  main.cpp
ExternalMemoryHack/: main.cpp
GifLoader/: CMakeLists.txt  README.MD  main.cpp
GifLoader/lib/: imgui.lib
InternalMemoryHack/: Readme.txt  main.cpp
KTXLoader/: CMakeLists.txt  README.MD  main.cpp
KTX_To_PNG_JPG/: CMakeLists.txt  README.MD  main.cpp
KTX_To_PNG_JPG/lib/: glfw3.lib
